examples/liqo/onlinebutique/services/istio-ingress-frontend.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: http-gateway-edge1
  namespace: istio-ingress-edge1
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation, be careful to this label that should match that of istio-ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
  - "*"
  gateways:
  - http-gateway-edge1
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: frontend
